<resources>
    <string name="app_name">EtesLibrary</string>
    <string name="logo_on_splash">Logo on splash</string>
    <string name="logo_on_login">Logo on login screen</string>
    <string name="login_message">Login to\nget started</string>
    <string name="email_field_placeholder">Email Address</string>
    <string name="password_field_placeholder">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="don_t_have_an_account_label">Don\'t have an account?</string>
    <string name="create_an_account_label">Create an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_pressable_label">Let\'s fix that</string>
    <string name="terms_amp_conditions"><u><![CDATA[Terms & Conditions]]></u></string>
    <string name="read_storage_perm_denied">You denied the permission for storage! You can allow it from settings.</string>
    <string name="image_selection_failed">Something went wrong! Could not get the image!</string>
    <!-- <string name="title_activity_saved_books">MainActivity</string> -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_click_again_to_exit">Please click back again to exit.</string>
    <string name="settings_favorites_label">Favorites</string>
    <string name="settings_downloads_label">Downloads</string>
    <string name="settings_night_mode_label">Night Mode</string>
    <string name="settings_receive_notifications_label">Receive Notifications</string>
    <string name="logout_button_label">Logout</string>
    <string name="content_divider_label">CONTENT</string>
    <string name="preferences_divider_label">PREFERENCES</string>
    <string name="hi_message_home_fragment">Hi,</string>
    <string name="username_placeholder">{username}</string>
    <string name="what_are_you_looking_for_today_home_fragment">What are you looking for today?</string>
    <string name="books_string">Books</string>
    <string name="krleza_label">Krleža</string>
    <string name="button_saves_book_that_user_is_previewing">Button saves book that user is previewing</string>
    <string name="save_string">save</string>
    <string name="lorem_ipsum_30">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mattis neque ut ante facilisis, id hendrerit risus malesuada. Mauris gravida auctor arcu vel mattis. Morbi elementum mauris id neque semper.</string>
    <string name="write_your_review">Write your review</string>
    <string name="write_your_review_in_here">Write your review in here…</string>
    <string name="submit">Submit</string>
    <string name="users_profile_image_desc">Users profile image</string>
    <string name="review_options_dropdown_menu_icon_desc">Review options dropdown menu icon</string>
    <string name="num_value_placeholder">0</string>
    <string name="books_read_label">books read</string>
    <string name="reviews_label">reviews</string>
    <string name="currently_reading_label">Currently reading:</string>
    <string name="favorite_label">Favorite</string>
    <string name="current_label">Current</string>
    <string name="current_book_label">Current book</string>
    <string name="favorite_author_label">Favorite author:</string>
    <string name="review_on_book_label">Review on {book}:</string>
    <string name="see_all_reviews_label">See all\nreviews</string>
    <string name="see_all_achievements_label">See all\nachievements</string>
    <string name="see_all_books_label">See all\nbooks</string>
    <string name="search_label">Search</string>
    <string name="search_books_input_hint">Search books</string>
    <string name="users_string">Users</string>
    <string name="how_to_save_a_book">Looks like you have no books saved press the icon showed above when reviewing a book to save it.</string>
</resources>