<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.FullTextSearchActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullTextSearchTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="?actionBarSize"
        android:paddingHorizontal="10dp"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.example.eteslibauthproto.utils.ETESLibEditText
            android:id="@+id/fullTextSearchTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search_books_input_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@id/fullTextSearchTextInputLayout"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/booksChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/books_string"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:checked="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/usersChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users_string"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fullTextSearchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterChipGroup"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>